add klenovaya stuff

--- a/src/house/style.styl
+++ b/src/house/style.styl
@@ -18,6 +18,13 @@
       &:hover
         background-color #8ebe86
 
+    &_disabled
+      background-color #ccc
+
+      &:hover
+        background-color #ccc
+        cursor default
+
   &__title
     font-size 3em
     text-align center
